Paraing for SICXE

--- a/Linker-Loader.ipynb
+++ b/Linker-Loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 140,
    "id": "ad100f30",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 141,
    "id": "c40ef98b",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 142,
    "id": "b95ce0b7",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 143,
    "id": "0519fe9a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 144,
    "id": "4b590308",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 145,
    "id": "3b792921",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 146,
    "id": "7306e22e",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 147,
    "id": "c3d71ebb",
    "metadata": {},
    "outputs": [],
@@ -112,28 +112,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 148,
    "id": "175e6d2a",
    "metadata": {},
    "outputs": [],
    "source": [
     "program = open_file('in1.txt')\n",
-    "start, length = get_prog_dimension(program[0])"
+    "start, end = get_prog_dimension(program[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 149,
    "id": "e892c36c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "memory_start, memory_end = get_memory_dimension(start, length)"
+    "memory_start, memory_end = get_memory_dimension(start, end)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 150,
    "id": "6b68d81a",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 151,
    "id": "d525c9ae",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 152,
    "id": "30de2887",
    "metadata": {},
    "outputs": [],
@@ -163,17 +163,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 153,
    "id": "c5263cb3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "memory_graph.fillna('xx', inplace = True)\n"
+    "memory_graph.fillna('xx', inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 154,
    "id": "9d27148c",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 155,
    "id": "d2094f87",
    "metadata": {},
    "outputs": [],
@@ -207,56 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "66e29918",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "memory_graph = memory_allocation(text_records, memory_graph)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "4659af5a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "PandasGUI INFO — pandasgui.gui — Opening PandasGUI\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<pandasgui.gui.PandasGui at 0x1a8b337a3a0>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "show(memory_graph)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "16a75238",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = memory_graph"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "f84e3cd8",
+   "execution_count": 156,
+   "id": "48081224",
    "metadata": {},
    "outputs": [
     {
@@ -6206,54 +6158,130 @@
        "267  xx  xx  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "memory_graph = memory_allocation(text_records, memory_graph)\n",
+    "memory_graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "id": "eac771f1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "program = open_file('in2.txt')\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8827ecf4",
+   "execution_count": 224,
+   "id": "9d590019",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def control_signal_head_info(head_record):\n",
+    "    name = head_record[1: 7]\n",
+    "    length = head_record[15: ]\n",
+    "    return name, length"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 297,
+   "id": "c80cdda1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def control_signal_defintion_reference(definition, reference):\n",
+    "    definition = definition[1: ]\n",
+    "    definition = re.findall('......?', definition)\n",
+    "    i = 0\n",
+    "    definitions = []\n",
+    "    while i < len(definition):\n",
+    "        symbol = definition[i].strip()\n",
+    "        address = definition[i+1][2:]\n",
+    "        definitions.append({\n",
+    "            'Symbol': symbol,\n",
+    "            'Address': address\n",
+    "        })\n",
+    "        i += 2\n",
+    "    \n",
+    "    reference = reference[1: ]\n",
+    "    reference = re.findall('......?', reference)\n",
+    "    references = [var.strip() for var in reference]\n",
+    "    \n",
+    "    return definitions, references"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "id": "289a4756",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def control_signal_modification(control_signal):\n",
+    "    modification_list = []\n",
+    "    for line in control_signal:\n",
+    "        if line[0] == 'M':\n",
+    "            address = line[1: 7]\n",
+    "            size = line[7: 9]\n",
+    "            operation = line[9: ]\n",
+    "            modification_list.append({\n",
+    "                'Address': address,\n",
+    "                'Size': size,\n",
+    "                'Operaiton': operation\n",
+    "            })\n",
+    "            \n",
+    "    return  modification_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "id": "6e013f53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def control_signals(program):\n",
+    "    control_signals = []\n",
+    "    control_signal = []\n",
+    "    for line in program:\n",
+    "        control_signal.append(line)\n",
+    "        if(line[0] == 'E'):\n",
+    "            name, length = control_signal_head_info(control_signal[0])\n",
+    "            definitions, references = control_signal_defintion_reference(control_signal[1], control_signal[2])\n",
+    "            t_records = get_text_records(control_signal)\n",
+    "            modification_list = control_signal_modification(control_signal)\n",
+    "            control_signal_obj = {\n",
+    "                'Name': name,\n",
+    "                'Length': length,\n",
+    "                'Definitions': definitions,\n",
+    "                'References': references,\n",
+    "                'T-Records' : t_records,\n",
+    "                'M-Records': modification_list\n",
+    "            }\n",
+    "            control_signals.append(control_signal_obj)\n",
+    "            control_signal = []\n",
+    "\n",
+    "    return control_signals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
    "id": "6eab43ce",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfc91e2b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c35db022",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "control_signals = control_signals(program)"
+   ]
   },
   {
    "cell_type": "code",
