--- a/Linker-Loader.ipynb
+++ b/Linker-Loader.ipynb
@@ -2,13 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "ad100f30",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pandasgui import show\n",
     "import re\n",
     "import numpy as np\n",
     "pd.set_option('display.max_rows', 1000)\n",
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3ce02760",
    "metadata": {},
    "outputs": [],
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0519fe9a",
    "metadata": {},
    "outputs": [],
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4b590308",
    "metadata": {},
    "outputs": [],
@@ -95,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "3b792921",
    "metadata": {},
    "outputs": [],
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "7306e22e",
    "metadata": {},
    "outputs": [],
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c3d71ebb",
    "metadata": {},
    "outputs": [],
@@ -141,18 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "175e6d2a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "program = open_file('in1.txt')\n",
+    "program = open_file('sic.txt')\n",
     "start, end = get_prog_dimension(program[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e892c36c",
    "metadata": {},
    "outputs": [],
@@ -162,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "6b68d81a",
    "metadata": {},
    "outputs": [],
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "d525c9ae",
    "metadata": {},
    "outputs": [],
@@ -182,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "30de2887",
    "metadata": {},
    "outputs": [],
@@ -192,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "c5263cb3",
    "metadata": {},
    "outputs": [],
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "9d27148c",
    "metadata": {},
    "outputs": [],
@@ -212,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "d2094f87",
    "metadata": {},
    "outputs": [],
@@ -238,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "48081224",
    "metadata": {},
    "outputs": [
@@ -6189,7 +6188,7 @@
        "267  xx  xx  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6225,17 +6224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "eac771f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "program = open_file('in2.txt')\n"
+    "program = open_file('sicxe.txt')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "9d590019",
    "metadata": {},
    "outputs": [],
@@ -6248,7 +6247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "c80cdda1",
    "metadata": {},
    "outputs": [],
@@ -6276,7 +6275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "289a4756",
    "metadata": {},
    "outputs": [],
@@ -6299,7 +6298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "6e013f53",
    "metadata": {},
    "outputs": [],
@@ -6330,7 +6329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "6eab43ce",
    "metadata": {},
    "outputs": [],
@@ -6340,7 +6339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "3aafa861",
    "metadata": {},
    "outputs": [],
@@ -6350,7 +6349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "880d2c72",
    "metadata": {},
    "outputs": [],
@@ -6386,7 +6385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "0792b08d",
    "metadata": {},
    "outputs": [],
@@ -6407,27 +6406,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "39002a02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Control_Section</th>\n",
+       "      <th>Symbol_Name</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PROGA</td>\n",
+       "      <td></td>\n",
+       "      <td>4000</td>\n",
+       "      <td>0063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td></td>\n",
+       "      <td>LISTA</td>\n",
+       "      <td>4040</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td></td>\n",
+       "      <td>ENDA</td>\n",
+       "      <td>4054</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PROGB</td>\n",
+       "      <td></td>\n",
+       "      <td>4063</td>\n",
+       "      <td>007F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td></td>\n",
+       "      <td>LISTB</td>\n",
+       "      <td>40C3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td></td>\n",
+       "      <td>ENDB</td>\n",
+       "      <td>40D3</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>PROGC</td>\n",
+       "      <td></td>\n",
+       "      <td>40E2</td>\n",
+       "      <td>0051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td></td>\n",
+       "      <td>LISTC</td>\n",
+       "      <td>4112</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td></td>\n",
+       "      <td>ENDC</td>\n",
+       "      <td>4124</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Control_Section Symbol_Name Address Length\n",
+       "0           PROGA                4000   0063\n",
+       "1                       LISTA    4040       \n",
+       "2                        ENDA    4054       \n",
+       "3           PROGB                4063   007F\n",
+       "4                       LISTB    40C3       \n",
+       "5                        ENDB    40D3       \n",
+       "6           PROGC                40E2   0051\n",
+       "7                       LISTC    4112       \n",
+       "8                        ENDC    4124       "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "estab_df, end = get_estab_df(control_sections, starting_address)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "b7c21248",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "estab_dict = get_estab_dict(estab_df)"
+    "estab_df, end = get_estab_df(control_sections, starting_address)\n",
+    "estab_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "b7c21248",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'PROGA': '4000',\n",
+       " 'LISTA': '4040',\n",
+       " 'ENDA': '4054',\n",
+       " 'PROGB': '4063',\n",
+       " 'LISTB': '40C3',\n",
+       " 'ENDB': '40D3',\n",
+       " 'PROGC': '40E2',\n",
+       " 'LISTC': '4112',\n",
+       " 'ENDC': '4124'}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estab_dict = get_estab_dict(estab_df)\n",
+    "estab_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "b34d2e54",
    "metadata": {},
    "outputs": [],
@@ -6437,7 +6570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "dfefe109",
    "metadata": {},
    "outputs": [],
@@ -6447,7 +6580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "19fbbffc",
    "metadata": {},
    "outputs": [],
@@ -6457,7 +6590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "6874e50a",
    "metadata": {},
    "outputs": [],
@@ -6467,7 +6600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "f6227606",
    "metadata": {},
    "outputs": [],
@@ -6477,7 +6610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "6a932515",
    "metadata": {},
    "outputs": [
@@ -6994,7 +7127,7 @@
        "20  xx  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7007,7 +7140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "8d568b52",
    "metadata": {},
    "outputs": [],
@@ -7066,7 +7199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "99f6b123",
    "metadata": {
     "scrolled": false
@@ -7087,7 +7220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "a01b10b4",
    "metadata": {},
    "outputs": [
@@ -7604,7 +7737,7 @@
        "20  xx  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7615,7 +7748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "746b35c9",
    "metadata": {},
    "outputs": [
@@ -7633,157 +7766,13 @@
        " 'ENDC': '4124'}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "estab_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "3d4be6f8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Control_Section</th>\n",
-       "      <th>Symbol_Name</th>\n",
-       "      <th>Address</th>\n",
-       "      <th>Length</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>PROGA</td>\n",
-       "      <td></td>\n",
-       "      <td>4000</td>\n",
-       "      <td>0063</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td></td>\n",
-       "      <td>LISTA</td>\n",
-       "      <td>4040</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td></td>\n",
-       "      <td>ENDA</td>\n",
-       "      <td>4054</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>PROGB</td>\n",
-       "      <td></td>\n",
-       "      <td>4063</td>\n",
-       "      <td>007F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td></td>\n",
-       "      <td>LISTB</td>\n",
-       "      <td>40C3</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td></td>\n",
-       "      <td>ENDB</td>\n",
-       "      <td>40D3</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>PROGC</td>\n",
-       "      <td></td>\n",
-       "      <td>40E2</td>\n",
-       "      <td>0051</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td></td>\n",
-       "      <td>LISTC</td>\n",
-       "      <td>4112</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td></td>\n",
-       "      <td>ENDC</td>\n",
-       "      <td>4124</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Control_Section Symbol_Name Address Length\n",
-       "0           PROGA                4000   0063\n",
-       "1                       LISTA    4040       \n",
-       "2                        ENDA    4054       \n",
-       "3           PROGB                4063   007F\n",
-       "4                       LISTB    40C3       \n",
-       "5                        ENDB    40D3       \n",
-       "6           PROGC                40E2   0051\n",
-       "7                       LISTC    4112       \n",
-       "8                        ENDC    4124       "
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "estab_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "c355b6d4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'PROGA \" \" 4000 0063\\r\\n\" \" LISTA 4040 \" \"\\r\\n\" \" ENDA 4054 \" \"\\r\\nPROGB \" \" 4063 007F\\r\\n\" \" LISTB 40C3 \" \"\\r\\n\" \" ENDB 40D3 \" \"\\r\\nPROGC \" \" 40E2 0051\\r\\n\" \" LISTC 4112 \" \"\\r\\n\" \" ENDC 4124 \" \"\\r\\n'"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "estab_df.to_csv(sep=' ', index=False, header=False)"
    ]
   },
   {
